--- a/src/template.html
+++ b/src/template.html
@@ -9,7 +9,7 @@
 <noscript>
     You need to enable JavaScript to run this app.
 </noscript>
-
+<div id="second"></div>
 <div id="app"></div>
 
 </body>
